# smol-doc-analyzer

./: .env  .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/eval/: docie_eval_set.jsonl  eval_set.jsonl
data/notebook_demo/: documents_n48_seed42.jsonl  memos_n48_seed42.jsonl  noisy_n48_seed42.jsonl  skeletons_n160_seed42.jsonl  skeletons_n48_seed42.jsonl
data/profiles/: document_surface_profile.json  insurance_distributions.json  layout_profile.json  legal_style_profile.json  ocr_noise_profile.json
data/schemas/: claim_skeleton.schema.json  medical_bill_skeleton.schema.json  salvage_document_skeleton.schema.json
docs/: .gitignore  _publish.yml  _quarto.yml  about.qmd  architecture.md  architecture.qmd  bugfix_audit_round2.md  data_provenance.md  docie_pipeline.html  docie_pipeline.md  docie_pipeline.qmd  index.qmd  quick-start.qmd  rvl_cdip_sql.md  sample_document_corpus.md  styles.scss  usage.md
docs/plan/: plan.md
evaluation/: __init__.py  benchmarks.py  build_cost_model.py  cost_model_helpers.py  eval_harness.py  local_backends.py  metrics.py  pricing.yaml
notebooks/: docie_pipeline_walkthrough.ipynb  pipeline_walkthrough.ipynb  random_forest_text_handwriting_classification.ipynb  rvl_cdip_openrouter_eval.ipynb  rvl_cdip_recreation_sampling.ipynb  sample_corpus_sql_integrations.ipynb  sample_corpus_train_test_pipeline.ipynb  sample_document_corpus_walkthrough.ipynb
scripts/: Start Chloride Bot.command  build_rf_notebook.py  build_rvl_cdip_openrouter_eval_notebook.py  build_rvl_cdip_recreation_notebook.py  build_sample_corpus_notebooks.py  install_changelog_launchagent.sh  install_discord_bot_launchagent.sh  install_discord_bot_loginitem.sh  preview_docs_site.sh  publish_docs_site.sh  run_discord_bot.sh  rvl_cdip_openrouter_eval_nb_cells.json  rvl_cdip_recreation_nb_cells.json  setup_env.py  uninstall_changelog_launchagent.sh  uninstall_discord_bot_launchagent.sh  uninstall_discord_bot_loginitem.sh  update_changelog.py  update_changelog.sh
src/: __init__.py
taxonomy/: acord_form_categories.yaml  medical_bills.yaml  salvage_claims.yaml
tests/: conftest.py  test_bugfix_regressions.py  test_config_provenance.py  test_cost_model.py  test_discord_bot.py  test_discord_commands.py  test_docie_eval.py  test_docie_pipeline.py  test_docie_serve.py  test_document_store.py  test_eval_harness.py  test_eval_metrics.py  test_generation.py  test_llm_client.py  test_outcome_prediction.py  test_pipeline.py  test_random_forest.py  test_rvl_cdip_store.py  test_rvl_openrouter_eval.py  test_storage_training.py  test_update_changelog.py  test_vit_prepare.py  test_wandb_utils.py
(+155 files in other folders)
