[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smol-doc-analyzer"
version = "0.5.0"
description = "Local insurance document classification, extraction, and memo generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=0.33.0",
  "datasets>=2.20.0",
  "evaluate>=0.4.2",
  "jsonschema>=4.22.0",
  "numpy>=1.26.0",
  "openai>=1.40.0",
  "pandas>=2.2.0",
  "pillow>=10.4.0",
  "pypdf>=4.3.0",
  "pymupdf>=1.24.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
  "reportlab>=4.2.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.3.0",
  "tenacity>=8.5.0",
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "transformers>=4.44.0",
  "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0",
  "openpyxl>=3.1.0",
]
notebooks = [
  "jupyter>=1.0.0",
  "ipykernel>=6.29.0",
  "nbconvert>=7.16.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
]
ocr = [
  "pytesseract>=0.3.10",
]
serve = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]
discord = [
  # Chloride (Coral Discord agent): https://github.com/S4IL21/chloride
  "chloride @ git+https://github.com/S4IL21/chloride.git@ebe61ec6aa460ba16c1ad94666144675da9cabff",
]
discord-voice = [
  "PyNaCl>=1.5.0",
  "yt-dlp>=2024.8.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "evaluation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
